# know-it-all-friend

./: .gitignore  LICENSE  README.md  claude.md  pyproject.toml
docs/: architecture.md
examples/: quickstart.py
know_it_all_friend/: desktop.py  paths.py  retry.py  watcher.py
know_it_all_friend/api/: app.py
know_it_all_friend/chunking/: __init__.py  chunker.py
know_it_all_friend/cli/: main.py
know_it_all_friend/conversion/: __init__.py  base.py  markitdown_converter.py  pipeline.py
know_it_all_friend/embeddings/: __init__.py  base.py  ollama_embedder.py
know_it_all_friend/enrichment/: __init__.py  extractor.py
know_it_all_friend/eval/: __init__.py  retrieval_eval.py
know_it_all_friend/graph/: __init__.py  builder.py
know_it_all_friend/ingestion/: __init__.py  inventory.py
know_it_all_friend/metadata/: __init__.py  extractor.py
know_it_all_friend/rag/: __init__.py  answer.py  base.py  ollama_llm.py
know_it_all_friend/retrieval/: __init__.py  search.py
know_it_all_friend/ui/: app.py
know_it_all_friend/vectorstore/: __init__.py  local_store.py
tests/: conftest.py  test_api.py  test_chunking.py  test_cli.py  test_conversion.py  test_enrichment.py  test_eval.py  test_graph.py  test_inventory.py  test_metadata.py  test_paths.py  test_rag.py  test_retrieval.py  test_retry.py  test_ui.py  test_vectorstore.py
