[project]
name = "know-it-all-friend"
version = "0.1.0"
description = "Domain-agnostic framework for turning heterogeneous document collections into a structured, searchable knowledge base."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "markitdown[pdf,docx,pptx,xlsx]>=0.0.1a3",
    "typer>=0.12",
    "numpy>=1.26",
    "ollama>=0.4",
]

[project.scripts]
kiaf = "know_it_all_friend.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["know_it_all_friend"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
