[project]
name = "know-it-all-friend"
version = "0.1.0"
description = "Domain-agnostic framework for turning heterogeneous document collections into a structured, searchable knowledge base."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "markitdown[pdf,docx,pptx,xlsx]>=0.0.1a3",
    "typer>=0.12",
    "numpy>=1.26",
    "ollama>=0.4",
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2",
    "streamlit>=1.59.0",
    "rank-bm25>=0.2.2",
    "httpx>=0.28.1",
    "watchdog>=6.0.0",
    "pywebview>=6.2.1",
    "pyqt6>=6.11.0",
    "pyqt6-webengine>=6.11.0",
    "qtpy>=2.4.3",
]

[project.scripts]
kiaf = "know_it_all_friend.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["know_it_all_friend"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
